Xmx1G for local project builds